# package-versions

./: .dockerignore  Cargo.toml  README.md  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
sdk/core/: Cargo.toml
sdk/core/src/: lib.rs
sdk/keyvault/: Cargo.toml
sdk/keyvault/examples/: hello.rs
sdk/keyvault/src/: lib.rs
